--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Blog - Home</title>
+  <title>About Me</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -15,10 +15,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="about.html">About Me</a>
         </li>
         <li class="nav-item">
@@ -30,23 +30,11 @@
 
   <!-- Content -->
   <div class="container mt-4">
-    <h1>Welcome to My Blog</h1>
-    <p>Welcome to the blog homepage. Here you’ll find my latest posts and thoughts on various topics.</p>
-    
-    <!-- Sample Blog Post -->
-    <div class="card mt-4">
-      <div class="card-header">
-        Blog Post #1
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Sample Blog Post Title</h5>
-        <p class="card-text">This is a sample blog post. Here I discuss various topics of interest, ranging from technology to lifestyle and everything in between.</p>
-      </div>
-    </div>
+    <h1>About Me</h1>
+    <p>Hello! I’m a blogger passionate about sharing my thoughts on various topics. Through this blog, I hope to inspire, inform, and connect with readers who have similar interests.</p>
   </div>
 
   <!-- Scripts -->
-  <script src="dist/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
