--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
     <p>Welcome to the blog homepage. Here you’ll find my latest posts and thoughts on various topics.</p>
     
     <!-- Sample Blog Post -->
-    <div class="card mt-4">
-      <div class="card-header">
-        Blog Post #1
+    <div class="container mt-4">
+        <h1>Welcome to My Blog</h1>
+        <div id="posts"></div>
       </div>
-      <div class="card-body">
-        <h5 class="card-title">Sample Blog Post Title</h5>
-        <p class="card-text">This is a sample blog post. Here I discuss various topics of interest, ranging from technology to lifestyle and everything in between.</p>
-      </div>
-    </div>
+      
   </div>
 
   <!-- Scripts -->
