--- a/about.html
+++ b/about.html
@@ -34,6 +34,8 @@
     <p>Hello! 
         My name is Chang and I'm a Computer Science Student from Columbia.
     </p>
+    <p>You can view my resume <a href="data/rsm.pdf" target="_blank">here</a>.</p>
+  </div>
   </div>
 
   <!-- Scripts -->
