--- a/about.html
+++ b/about.html
@@ -15,7 +15,10 @@
   <div class="container mt-4">
     <h1>About Me</h1>
     <p>Hello! 
-        My name is Chang and I'm a Computer Science Student from Columbia.
+        My name is Chang and I'm a former Navy Corpsman currently studying Computer Science at Columbia.
+        I'm passionate about healthcare and helping others!
+        You can reach me via chang.kim@columbia.edu
+
     </p>
     <p>You can view my resume <a href="data/rsm.pdf" target="_blank">here</a>.</p>
   </div>
