--- a/navbar.html
+++ b/navbar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="about.html">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">TBD</a>
         </li>
       </ul>
     </div>
